src/test/deca/context/invalid/oracle/condition_invalid.deca
{
    if(1 <= 2 <= 3){
        print("ok");
    }
    print("ok");
}